@@ -17,45 +17,72 @@ to display. The available types are:</p>
   <li>Bar Chart</li>
   <li>Paint Bar</li>
   <li>Line</li>
-  <li>Candlestick</li>
-  <li>Point and Figure</li>
+  <li>Candle</li>
+  <li>Candle 2<br>
+  </li>
+  <li>P&amp;F</li>
   <li>Swing</li>
 </ul>
 <p></p>
+<h3><br>
+</h3>
 <h3>Bar Chart</h3>
 <p>The standard OHLC bar chart. Color is used to show up, down or no
 change status from the previous bar.</p>
 <img alt="Bar chart" src="barchart.png">
 <p></p>
+<h3><br>
+</h3>
 <h3>Paint Bar</h3>
 <p>Same as the Bar chart type except that the colors used are based on
 the alert status rules of an active indicator. Used for showing
-generalized support and resistance areas. For example, this paint bar is
+generalized support and resistance areas. For example, this paint bar
+is
 based on the MACD indicator. Notice how when the red MACD line rises
 above the MACD yellow trigger line, the bars are green, meaning a buy
 alert. When the MACD falls below the MACD trigger line, the bars are
 colored red, meaning a sell alert.</p>
 <h3><img alt="Paint bar chart" src="paintbarchart.png"> </h3>
 <p></p>
+<h3><br>
+</h3>
 <h3>Line</h3>
 <p>This chart is just a single line plot based on the days close value.</p>
 <p><img alt="Line chart" src="linechart.png"> </p>
 <p></p>
-<h3>Candlestick</h3>
-<p>This is the standard candlestick chart.
-A solid (traditionally white) candle body means that the
+<br>
+<h3>Candle<br>
+</h3>
+This is the standard candlestick chart.
+An empty box (traditionally white) candle body means that the
 close was higher than the open.
-A hollow (traditionally black) candle body means that the
+A solid (traditionally black) candle body means that the
+close was lower than the open. <br>
+<br>
+<img style="width: 599px; height: 272px;" alt="" src="candlechart.png"><br>
+<br>
+<h3>Candle 2<br>
+</h3>
+<p>This is a custom candle chart.
+An empty box (traditionally white) candle body means that the
+close was higher than the open.
+A solid (traditionally black) candle body means that the
 close was lower than the open.
-Colour adds another dimension. Red is a lower close than the previous close.
-Green is a higher close. Blue indicates no change from the previous close.
+Colour adds another dimension. Red is a lower close than the previous
+close.
+Green is a higher close. Blue indicates no change from the previous
+close.
 </p>
-<p><img alt="Candle chart" src="candlestickchart.png" width="716" height="325"> </p>
+<p><img style="width: 720px; height: 298px;" alt=""
+ src="candlestickchart.png"><br>
+</p>
 <p></p>
-<h3>Point and Figure</h3>
+<h3><br>
+</h3>
+<h3>P&amp;F</h3>
 <p>Qtstalker version of Point and Figure uses a general box sizing
 formula. The formula is calculated by taking the increment of the
-current chart scale  and divide that by 4. A 3 box reversal is also
+current chart scale and divide that by 4. A 3 box reversal is also
 used. The other difference is no X's or O's are used, instead we use
 colors. Color up is used for X's and Color Down is used for O's. Much
 easier to gauge at a glance and stays in keeping with other chart type
@@ -66,13 +93,17 @@ you to overlay indicators.</p>
 <p></p>
 <p></p>
 <p></p>
-
+<h3><br>
+</h3>
 <h3>Swing</h3>
-<p>This is the typical Gann type swing chart.</p>
+<p>This is the typical Gann type swing chart. An up swing is colored
+green. A down swing is colored red.<br>
+</p>
 <p>
 <img src="swing.png" title="" alt="Swing chart"
- style="width: 722px; height: 604px;">
+ style="width: 722px; height: 604px;"><br>
 </p>
-
+<p><br>
+</p>
 </body>
 </html>
